[gd_scene load_steps=15 format=3 uid="uid://big8tl0nt1wgj"]

[ext_resource type="Script" path="res://launcher/launcher.gd" id="1_hwwg4"]
[ext_resource type="PackedScene" uid="uid://b2pj4dd1ctr83" path="res://launcher/bubble.tscn" id="2_8j4tv"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="3_tv4qt"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="4_fb2ym"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="4_rpfoh"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="6_rl65k"]

[sub_resource type="Curve3D" id="Curve3D_7tji3"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 0.85, 0, -4.5, 0, 0, 0, 0, 0, 0, 0.8, 0, 4.5),
"tilts": PackedFloat32Array(0, 0)
}
point_count = 2

[sub_resource type="SphereMesh" id="SphereMesh_y7bry"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_s20p8"]

[sub_resource type="CylinderMesh" id="CylinderMesh_jnltw"]
material = SubResource("StandardMaterial3D_s20p8")
height = 4.0

[sub_resource type="Animation" id="Animation_hbi46"]
resource_name = "angle_selection"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RotationIndicator:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.785398, 0), Vector3(0, 0.785398, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_iuje8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RotationIndicator:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:power_ratio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.5]
}

[sub_resource type="Animation" id="Animation_qkhqq"]
resource_name = "power_selection"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:power_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.5, 1.0, 0.0, 0.5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n14bt"]
_data = {
"RESET": SubResource("Animation_iuje8"),
"angle_selection": SubResource("Animation_hbi46"),
"power_selection": SubResource("Animation_qkhqq")
}

[node name="Launcher" type="Node3D"]
transform = Transform3D(0.999962, 0, 0.00872654, 0, 1, 0, -0.00872654, 0, 0.999962, -10, 0, 0)
script = ExtResource("1_hwwg4")
projectile_scene = ExtResource("2_8j4tv")

[node name="Path3D" type="Path3D" parent="."]
transform = Transform3D(0.999962, 0, -0.00872654, 0, 1, 0, 0.00872654, 0, 0.999962, -0.0871477, 0, -0.000760525)
curve = SubResource("Curve3D_7tji3")

[node name="PathFollow3D" type="PathFollow3D" parent="Path3D"]
transform = Transform3D(-0.999985, 0, 0.00555552, 0, 1, 0, -0.00555552, 0, -0.999985, 0.825, 0, 4.76831e-07)
progress = 4.50007
loop = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="Path3D/PathFollow3D"]
mesh = SubResource("SphereMesh_y7bry")

[node name="StateChart" type="Node" parent="."]
script = ExtResource("3_tv4qt")

[node name="Root" type="Node" parent="StateChart"]
script = ExtResource("4_fb2ym")
initial_state = NodePath("SelectingPosition")

[node name="SelectingPosition" type="Node" parent="StateChart/Root"]
script = ExtResource("4_rpfoh")

[node name="ToSelectingRotation" type="Node" parent="StateChart/Root/SelectingPosition"]
script = ExtResource("6_rl65k")
to = NodePath("../../SelectingRotation")
event = &"action_pressed"
delay_in_seconds = "0.0"

[node name="SelectingRotation" type="Node" parent="StateChart/Root"]
script = ExtResource("4_rpfoh")

[node name="ToSelectingPower" type="Node" parent="StateChart/Root/SelectingRotation"]
script = ExtResource("6_rl65k")
to = NodePath("../../SelectingPower")
event = &"action_pressed"
delay_in_seconds = "0.0"

[node name="SelectingPower" type="Node" parent="StateChart/Root"]
script = ExtResource("4_rpfoh")

[node name="ToShooting" type="Node" parent="StateChart/Root/SelectingPower"]
script = ExtResource("6_rl65k")
to = NodePath("../../Shooting")
event = &"action_pressed"
delay_in_seconds = "0.0"

[node name="Shooting" type="Node" parent="StateChart/Root"]
script = ExtResource("4_rpfoh")

[node name="ToSelectingPosition" type="Node" parent="StateChart/Root/Shooting"]
script = ExtResource("6_rl65k")
to = NodePath("../../SelectingPosition")
delay_in_seconds = "1"

[node name="RotationIndicator" type="Node3D" parent="."]
visible = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="RotationIndicator"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 2, 0, 0)
mesh = SubResource("CylinderMesh_jnltw")
skeleton = NodePath("../..")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_n14bt")
}

[node name="Timer" type="Timer" parent="."]

[connection signal="state_physics_processing" from="StateChart/Root/SelectingPosition" to="." method="_on_selecting_position_state_physics_processing"]
[connection signal="state_entered" from="StateChart/Root/SelectingRotation" to="." method="_on_selecting_rotation_state_entered"]
[connection signal="state_exited" from="StateChart/Root/SelectingRotation" to="." method="_on_selecting_rotation_state_exited"]
[connection signal="state_entered" from="StateChart/Root/SelectingPower" to="." method="_on_selecting_power_state_entered"]
[connection signal="state_exited" from="StateChart/Root/SelectingPower" to="." method="_on_selecting_power_state_exited"]
[connection signal="state_entered" from="StateChart/Root/Shooting" to="." method="_on_shooting_state_entered"]
